# video-stream-OR-app

./: .gitignore  Dockerfile  LICENSE  README.md
.github/workflows/: deploy_backend.yml  deploy_dbt_analytics.yml  deploy_etl.yml  deploy_frontend.yml  deploy_image-classifier.yml  deploy_stats-aggregator.yml  deploy_video-stream-producer.yml  deploy_video-stream-reader.yml
backend/: app.py  data_models.py  database.py  requirements.txt  run_uvicorn.sh  template.yml  youtube_api.py
dbt_analytics/: README.md  dbt_analytics_airflow_dag.py
dbt_analytics/video_stream_dbt_analytics/: dbt_project.yml
frontend/: package-lock.json  package.json  template.yml  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  index.js  models.tsx
image-classifier/: Dockerfile  README.md  pyproject.toml  run_notebook.ps1  samconfig.toml  template.yml
image-classifier/src/: classifiers.py  main.py  requirements.txt  spark_entrypoint.py  test.py
image-classifier/src/app/: Untitled.ipynb  avro_schemas.py  classifiers.py  image_stream_processor.py  kafka.py  kafka_config.py  main.py  pulsar_config.py  records.py  spark.ipynb  test.py  test_classifiers.py
image-classifier/src/app/detectors/: __init__.py  common.py  faster_rcnn_mobilenet.txt  faster_rcnn_resnet.txt  haar_classifier.py  yolo.py
src/: main.py  requirements.txt
stats-aggregator/: Dockerfile  README.md  pyproject.toml  template.yml
video-stream-producer/: Dockerfile  README.md  requirements.txt  template.yml
video-stream-reader/: Dockerfile  README.md  build.sbt  pyproject.toml  template.yml
(+54 files in other folders)
