[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "app"
version = "0.0.1"
authors = [
  { name="Kevin McQuate" },
]
description = "youtube video live stream consumption"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

